2003-08-15  Paul Eggert  <eggert@twinsun.com>

	* srclist-update: Use three spaces, rather than tab, after '#'
	in shell-script copyright notices.  Suggested by Bruno Haible.
	Remove unnecessary parenthesization in regular expression.
	
2003-08-13  Paul Eggert  <eggert@twinsun.com>

	* srclist-update: Change update back to the old behavior, leaving
	whitespace alone.  Use one 'sed' command rather than a pipeline.
	(fixlicense): Now a variable, not a function.
	(remove_trailing_blanks): Remove.
	(fixfile): Don't invoke unexpand or cat, or remove trailing blanks.
	* config.guess, config.sub, install-sh, missing, texinfo.tex:
	Undo previous (whitespace-only) change.

2003-08-12  Paul Eggert  <eggert@twinsun.com>

	* srclist-update: Add copyright notice.
	(remove_id_lines, remove_trailing_blanks): New constants.
	(fixfile): Use them to normalize spacing a bit in copied files.
	* config.guess, config.sub, install-sh, missing, texinfo.tex:
	Normalize leading white space and remove trailing white space.
	
	* texinfo.tex: Sync with texinfo.

	* srclist.txt: Don't get regex.h, strdup.c, strtoll.c,
	strtoul.c from libc, to merge coreutils whitespace changes.
	
	* srclist.txt: Get the following m4 files from gettext:
	codeset.m4, gettext.m4, glibc21.m4, iconv.m4, intdiv0.m4,
	inttypes-pri.m4, lcmessage.m4, lib-ld.m4, lib-link.m4, lib-prefix.m4,
	longdouble.m4, nls.m4, po.m4, progtest.m4, signed.m4, wchar_t.m4,
	wint_t.m4.

2003-08-12  Karl Berry  <karl@gnu.org>

	* srclist.txt: can't sync vasnprintf.c any more, changes have been
	made.

2003-08-03  Karl Berry  <karl@gnu.org>

	* depcomp: update from automake.

2003-07-24    <karl@gnu.org>

	* missing: update from automake.

2003-07-23    <karl@gnu.org>

	* config.sub: update from prep.

2003-07-19    <karl@gnu.org>

	* config.sub: update from prep.

2003-07-17    <karl@gnu.org>

	* config.sub: update from prep.

2003-07-16    <karl@gnu.org>

	* srclist-update: was running fixlicense twice, which caused