@@ -1,4 +1,4 @@
-# $Id: srclist.txt,v 1.22 2003-08-12 23:27:26 eggert Exp $
+# $Id: srclist.txt,v 1.23 2003-08-17 05:30:20 eggert Exp $
 # Files for which we are not the source.  See ./srclistvars.sh for the
 # variable definitions.
 
@@ -76,6 +76,10 @@ $LIBCSRC/argp/argp-xinl.c		lib gpl
 $LIBCSRC/argp/argp.h			lib gpl
 $LIBCSRC/posix/getopt.h			lib gpl
 $LIBCSRC/posix/getopt1.c		lib gpl
+$LIBCSRC/posix/regex.h			lib gpl
+$LIBCSRC/string/strdup.c		lib gpl
+$LIBCSRC/sysdeps/generic/strtoll.c	lib gpl
+$LIBCSRC/sysdeps/generic/strtoul.c	lib gpl
 #
 # These are close, but ...
 #$LIBCSRC/crypt/md5.c			lib gpl
@@ -92,10 +96,8 @@ $LIBCSRC/posix/getopt1.c		lib gpl
 #$LIBCSRC/posix/fnmatch.h		lib gpl (fnmatch_.h in gnulib)
 #$LIBCSRC/posix/fnmatch_loop.c		lib gpl
 #$LIBCSRC/posix/getopt.c		lib gpl
-#$LIBCSRC/posix/regex.h			lib gpl
 #$LIBCSRC/posix/tempname.c		lib gpl
 #$LIBCSRC/stdlib/rpmatch.c		lib gpl
-#$LIBCSRC/string/strdup.c		lib gpl
 #$LIBCSRC/string/strndup.c		lib gpl
 #$LIBCSRC/string/strverscmp.c		lib gpl
 #$LIBCSRC/sysdeps/generic/memchr.c	lib gpl
@@ -108,8 +110,6 @@ $LIBCSRC/posix/getopt1.c		lib gpl
 #$LIBCSRC/sysdeps/generic/strpbrk.c	lib gpl
 #$LIBCSRC/sysdeps/generic/strstr.c	lib gpl
 #$LIBCSRC/sysdeps/generic/strtol.c	lib gpl
-#$LIBCSRC/sysdeps/generic/strtoll.c	lib gpl
-#$LIBCSRC/sysdeps/generic/strtoul.c	lib gpl
 #$LIBCSRC/sysdeps/posix/dup2.c		lib gpl
 #$LIBCSRC/sysdeps/posix/euidaccess.c	lib gpl
 #$LIBCSRC/sysdeps/unix/bsd/poll.c	lib gpl
