@@ -16,7 +16,7 @@
    with this program; if not, write to the Free Software Foundation,
    Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
-#define QUAD 1
+#define	QUAD	1
 
 #include <strtol.c>
 
