@@ -15,6 +15,6 @@
    with this program; if not, write to the Free Software Foundation,
    Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
-#define UNSIGNED 1
+#define	UNSIGNED	1
 
 #include "strtol.c"
